style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
html{
    background-color: rgb(18, 18, 18);
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    font-size: 18px;
}
h1{
    text-align: center;
    padding: 16px;
    font-size: 8vh;
}
div.check, div.container{
    padding: 8px ;
}

label{
    display: block;
    padding-top: 3px;
}
input{
    margin-bottom: 3px;
}
#result, #secreteResult{
    color: rgba(3, 3, 3, 0.938);
    background-color: white;
    height: fit-content;
    width: fit-content;
    max-width: 100vw;
    min-width: 80vw;
    margin-top: 5px;
    border-radius: 3px;
    overflow-x: scroll;

}

